--- a/Projects/Oppgave 29 April/styles.css
+++ b/Projects/Oppgave 29 April/styles.css
@@ -1,8 +1,20 @@
 .Header {
     display:flex;
     justify-content: space-between;
-    
+
 }
     
+.card {
+    box-shadow: 0 4px 8px 0 rgba(rgb(255, 0, 0), green, blue, alpha);
+    transition: 0.3;
+}
 
+.card:hover {
+    box-shadow: 0 8px 16px 0;
+
+}
+
+.container {
+    padding:8px 16px ;
+}
 
